--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "Sprint-Challenge-Node-Express",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "repository": "https://github.com/maribelcuales/Sprint-Challenge-Node-Express.git",
   "author": "maribelcuales <maribelcuales@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "start": "nodemon server.js"
+  },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "knex": "^0.14.6",
